--- a/old/blog with iframe method/fallacies_baysian_brain.html
+++ b/old/blog with iframe method/fallacies_baysian_brain.html
@@ -20,7 +20,6 @@
             color: black;
             border: 2px solid lightgrey; /* Add a grey border */
             cursor: pointer;
-
           }
           pre.hljs code {
             white-space: pre-wrap;
@@ -50,7 +49,7 @@
       </head>
       <body>
         <h1 id="probabilistic-fallacies-in-the-bayesian-brain-a-critique-of-the-bayesian-approach-to-cognition"><a class="markdownIt-Anchor" href="#probabilistic-fallacies-in-the-bayesian-brain-a-critique-of-the-bayesian-approach-to-cognition"></a> Probabilistic fallacies in the Bayesian brain – A critique of the Bayesian approach to cognition</h1>
-<p><strong>Author</strong>: <a target="_blank" href="https://github.com/selvastics">Clievins Selva</a><br>
+<p><strong>Author</strong>: <a href="https://github.com/selvastics">Clievins Selva</a><br>
 <strong>Date</strong>: March 31, 2023<br>
 <strong>License</strong>: CC BY 4.0</p>
 <h2 id="adaptions"><a class="markdownIt-Anchor" href="#adaptions"></a> adaptions:</h2>
@@ -104,14 +103,14 @@ As research delves deeper into the role of Bayesian principles in human cognitio
 In their study, Qiao and colleagues (2023) showed that Bayesian surprise modulates connections between stimulus processing brain regions and control regions/networks. This modulation drives cognitive flexibility through control engagement, ultimately allowing the brain to adapt to varying control demands. This research provides valuable insights into the mechanisms underlying cognitive flexibility and the source of switch costs in cognitive tasks (Qiao et al., 2023). Additionally, Gijsen et al. (2021) investigated the cortical dynamics of the somatosensory learning system and identified neural signatures of Bayesian surprise. The study found that secondary somatosensory cortices represent confidence-corrected surprise, while indications of Bayesian surprise encoding are present in the primary somatosensory cortex. This dissociation suggests that early surprise signals may control subsequent model update rates, supporting the hypothesis that early somatosensory processing reflects Bayesian perceptual learning (Gijsen et al., 2021). Furthermore, Visalli et al. (2021) examined electroencephalographic correlates of temporal Bayesian belief updating and surprise. The study demonstrated that late positive, centro-parietally distributed event-related potentials are associated with surprise and belief updating. This evidence suggests that temporal predictions are computed using Bayesian principles and are reflected in P3 modulations, similar to other cognitive domains (Visalli et al., 2021).
 These findings highlight the significance of neuronal surprise in the Bayesian brain, showcasing its role in cognitive control, perceptual learning, and belief updating. In the next chapter, I will review the mathematical and statistical underpinnings of this perspective to provide a deeper understanding of its foundations.</p>
 <h2 id="references"><a class="markdownIt-Anchor" href="#references"></a> References</h2>
-<p>r-graph Gallery. (n.d.). Retrieved from <a target="_blank" href="https://r-graph-gallery.com/index.html">https://r-graph-gallery.com/index.html</a></p>
-<p>SoSci Survey. (n.d.). Features. Retrieved from <a target="_blank" href="https://www.soscisurvey.de/en/features">https://www.soscisurvey.de/en/features</a></p>
-<p>SoSci Survey. (n.d.). Creating Feedback: Correct. Retrieved from <a target="_blank" href="https://www.soscisurvey.de/help/doku.php/en:create:feedback-correct">https://www.soscisurvey.de/help/doku.php/en:create:feedback-correct</a></p>
-<p>SoSci Survey. (n.d.). Creating Feedback: Visual. Retrieved from <a target="_blank" href="https://www.soscisurvey.de/help/doku.php/en:create:feedback-visual">https://www.soscisurvey.de/help/doku.php/en:create:feedback-visual</a></p>
-<p>SoSci Survey. (n.d.). Creating Layout. Retrieved from <a target="_blank" href="https://www.soscisurvey.de/help/doku.php/de:create:layout">https://www.soscisurvey.de/help/doku.php/de:create:layout</a></p>
-<p>SoSci Survey. (n.d.). Creating Questions: Scale - Inverting Items. Retrieved from <a target="_blank" href="https://www.soscisurvey.de/help/doku.php/en:create:questions:scale#inverting_items">https://www.soscisurvey.de/help/doku.php/en:create:questions:scale#inverting_items</a></p>
-<p>Chart.js. (n.d.). Samples. Retrieved from <a target="_blank" href="https://www.chartjs.org/docs/latest/samples/information.html">https://www.chartjs.org/docs/latest/samples/information.html</a></p>
-<p>Rammstedt, B., Lechner, C. M., &amp; Danner, D. (2018). Relationships between personality and cognitive ability: A facet-level analysis. <em>Journal of Intelligence, 6</em>(2), 28. <a target="_blank" href="https://doi.org/10.1027/1015-5759/a000481">https://doi.org/10.1027/1015-5759/a000481</a></p>
+<p>r-graph Gallery. (n.d.). Retrieved from <a href="https://r-graph-gallery.com/index.html">https://r-graph-gallery.com/index.html</a></p>
+<p>SoSci Survey. (n.d.). Features. Retrieved from <a href="https://www.soscisurvey.de/en/features">https://www.soscisurvey.de/en/features</a></p>
+<p>SoSci Survey. (n.d.). Creating Feedback: Correct. Retrieved from <a href="https://www.soscisurvey.de/help/doku.php/en:create:feedback-correct">https://www.soscisurvey.de/help/doku.php/en:create:feedback-correct</a></p>
+<p>SoSci Survey. (n.d.). Creating Feedback: Visual. Retrieved from <a href="https://www.soscisurvey.de/help/doku.php/en:create:feedback-visual">https://www.soscisurvey.de/help/doku.php/en:create:feedback-visual</a></p>
+<p>SoSci Survey. (n.d.). Creating Layout. Retrieved from <a href="https://www.soscisurvey.de/help/doku.php/de:create:layout">https://www.soscisurvey.de/help/doku.php/de:create:layout</a></p>
+<p>SoSci Survey. (n.d.). Creating Questions: Scale - Inverting Items. Retrieved from <a href="https://www.soscisurvey.de/help/doku.php/en:create:questions:scale#inverting_items">https://www.soscisurvey.de/help/doku.php/en:create:questions:scale#inverting_items</a></p>
+<p>Chart.js. (n.d.). Samples. Retrieved from <a href="https://www.chartjs.org/docs/latest/samples/information.html">https://www.chartjs.org/docs/latest/samples/information.html</a></p>
+<p>Rammstedt, B., Lechner, C. M., &amp; Danner, D. (2018). Relationships between personality and cognitive ability: A facet-level analysis. <em>Journal of Intelligence, 6</em>(2), 28. <a href="https://doi.org/10.1027/1015-5759/a000481">https://doi.org/10.1027/1015-5759/a000481</a></p>
 
       <script>
       async function copyCodeToClipboard(element) {
@@ -121,7 +120,7 @@ These findings highlight the significance of neuronal surprise in the Bayesian b
           await navigator.clipboard.writeText(code);
           element.innerHTML = 'Copied';
           setTimeout(() => {
-            element.innerHTML = '<img src=\"../assets/images/copy-24.png\" alt=\"Copy Code\" class="button-icon"> Copy Code';
+            element.innerHTML = '<img src=\"../assets/images/clipicon.png\" alt=\"Copy code\" class="button-icon"> Copy code';
           }, 3000);
         } catch (err) {
           console.error('Failed to copy text: ', err);
@@ -129,10 +128,4 @@ These findings highlight the significance of neuronal surprise in the Bayesian b
       }
       </script></body>
       </html>
-      <!-- Add this script to the end of your blogarticles-->
-      <script>
-        window.onload = function() {
-          window.parent.postMessage({"height": document.body.scrollHeight}, "*");
-        }
-      </script>
       
