--- a/sosci_feedback_iframe_backup.html
+++ b/sosci_feedback_iframe_backup.html
@@ -200,19 +200,47 @@
             <div class="row">
               <div class="col-lg-12">
                 <div class="meeting-single-item">
-                  <div class="down-content" style="border-top-left-radius: 20px; border-top-right-radius: 20px; position: relative; overflow: hidden;">
-                    <div style="overflow: hidden; width: 100%; height: 100%;">
-                      <object id="objectFrame" data="blogarticles/guide_participant_report.html" type="text/html" style="width:100%; height:100%;"></object>
-                    </div>
-                    <script>
-                      window.addEventListener("message", function(event) {
-                        if (typeof event.data.height !== 'undefined') {
-                          var newHeight = event.data.height + 100; // Adding 10 extra pixels
-                          document.querySelector('.down-content').style.height = newHeight + 'px';
-                          document.getElementById('objectFrame').style.height = newHeight + 'px';
-                        }
-                      }, false);
-                    </script>
+                  <div class="down-content" style="border-top-left-radius: 20px; border-top-right-radius: 20px; position: relative;">
+
+                    <iframe id="myIframe" src="blogarticles/guide_participant_report.html" 
+                    scrolling = no style="height:200px;width:100%;border:none;overflow:hidden;">
+            </iframe>
+
+            <script>
+              window.onload = function() {
+  let intervalId;
+  let attempts = 0;
+  const lastReloadTime = sessionStorage.getItem("lastReloadTime") || 0;
+
+  // Only proceed if enough time has elapsed since the last reload
+  if (Date.now() - lastReloadTime > 2000) {
+    const checkCondition = function() {
+      attempts++;
+      const condition = window.someGlobalVariableSetBySecondScript;
+
+      if (condition || attempts > 10) {
+        clearInterval(intervalId);  // Stop the interval
+
+        if (condition) {
+          sessionStorage.setItem("lastReloadTime", Date.now());
+          location.reload(true);
+        }
+      }
+    };
+
+    intervalId = setInterval(checkCondition, 500);
+  }
+
+  window.addEventListener("message", function(event) {
+    if (event.data["function"] === "adjustHeight") {
+      const iframe = document.getElementById("myIframe");
+      iframe.style.height = event.data.height + "px";
+    }
+  }, false);
+};
+
+
+            </script>
       
                   </div>
                 </div>
