--- a/header.html
+++ b/header.html
@@ -116,14 +116,10 @@
                              <li><a href="sosci_feedback.html">Participant Feedback</a></li>
                          </ul>
                      </li>
-                     <li><a href="great-articles.html">Great Articles</a></li>
-                     <li class="has-sub">
-                      <a href="javascript:void(0)">My Articles</a>
-                      <ul class="sub-menu">
-                          <li><a href="baysian_brain.html">Bayesian Brain</a></li>
-                      </ul>
-                  </li>
-                     <li><a href="aboutme.html">About me</a></li>
+                    <li><a href="great-articles.html">Great Articles</a></li>
+                    <li><a href="great-articles.html">Publications</a></li>
+                    <li><a href="aboutme.html">About me</a></li>
+
                  </ul>
                  <!-- ***** Menu End ***** -->
                  <!-- ***** BURGER MENU ***** -->
