--- a/header.html
+++ b/header.html
@@ -113,9 +113,11 @@
                          <ul class="sub-menu">
                              <li><a href="descriptives.html">Descriptive Statistics</a></li>
                              <li><a href="inferences.html">Inferential Statistics</a></li>
+                             <li><a href="sosci_feedback.html">Participant Feedback</a></li>
                           </ul>
                       </li>
                       <li><a href="great-articles.html">Great Articles</a></li>
+                      <li><a href="inferences copy.html">Publications</a></li>
                       <li><a href="aboutme.html">About me</a></li>
                   </ul>
                  <!-- ***** Menu End ***** -->
