--- a/inferences copy.html
+++ b/inferences copy.html
@@ -35,7 +35,138 @@
     <link rel="stylesheet" href="assets/css/lightbox.css">
 
 <!-- ***** IMPORT HEADER FROM header.html ***** -->
-<div id="header"></div>
+<!--
+
+-->
+</head>
+<body>
+ <!-- Sub Header -->
+ <div class="sub-header">
+  <div class="container">
+   <div class="row">
+    <div class="col-lg-8 col-sm-8">
+     <div class="left-content">
+      <p>
+       This is a statistics blog by Clievins Selva.
+      </p>
+     </div>
+    </div>
+    <div class="col-lg-4 col-sm-4">
+     <div class="right-icons">
+      <ul>
+       <li>
+         <a href="https://www.linkedin.com/in/clievins-selva-02594419a/" target="_blank">
+           <img src="assets/images/linkedin-logo.png" alt="Linkedin Logo" style="width: 20px; height: 20px;">
+         </i>
+        </a>
+       </li>
+       <li>
+         <a href="https://www.researchgate.net/profile/Clievins-Selva" target="_blank">
+           <img src="assets/images/researchgate-logo_whiteet.png" alt="ResearchGate Logo" style="width: 20px; height: 20px;">
+         </a>
+       </li>
+        </a>
+        <li>
+         <a href="https://github.com/selvastics" target="_blank">
+           <img src="assets/images/github-logo.png" alt="Github Logo" style="width: 20px; height: 20px;">
+         </a>
+       </li>
+        </a>
+       </li>
+       <li>
+         <a href="https://orcid.org/my-orcid?orcid=0000-0001-9980-7127" target="_blank">
+           <img src="assets/images/orcid_icon_white.png" alt="ORCID Logo" style="width: 23px; height: 23px;">
+         </a>
+       </li>
+      </ul>
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
+<!-- ***** Header Area Start ***** -->
+<header class="header-area header-sticky">
+ <div class="container">
+     <div class="row">
+         <div class="col-12">
+             <nav class="main-nav">
+                 <!-- ***** Logo Start ***** -->
+                 <a class="logo" href="index.html">
+                   <img class="logo-img" src="assets/images/selvastics_d.png" alt="Selvastics logo" style="max-height: 70px; width: auto;">
+               </a>
+
+               <style>
+                 @media (max-width: 660px) {
+                   .logo-img {
+                     max-height: 10vw !important; /* Overriding the inline style for medium screens */
+                   }
+                 }
+
+                 @media (max-width: 360px) {
+                   .logo-img {
+                     max-height: 8vw !important; /* Overriding the inline style for medium screens */
+                   }
+                 }
+
+                 @media (max-width: 300px) {
+                   .logo-img {
+                     max-height: 7vw !important; /* Overriding the inline style for medium screens */
+                   }
+                 }
+                 
+                 @media (max-width: 250px) {
+                   .logo-img {
+                     max-height: 5vw !important; /* Overriding the inline style for medium screens */
+                   }
+                 }
+
+               </style>                
+               
+               <!-- ***** Logo End ***** -->
+
+                   <!-- ***** Menu Start ***** -->
+                   <ul class="nav" id="nav-menu">
+                     <li class="scroll-to-section">
+                         <a class="active" href="index.html">Home</a>
+                     </li>
+                     <li class="has-sub">
+                         <a href="javascript:void(0)">SPSS</a>
+                         <ul class="sub-menu">
+                           <li><a href="javascript:alert('Coming Soon!');">Overview</a></li>
+                           <li><a href="javascript:alert('Coming Soon!');">SPSS Tutorials</a></li>
+                           <li><a href="javascript:alert('Coming Soon!');">SPSS Examples</a></li>
+                         </ul>
+                     </li>
+                     <li class="has-sub">
+                         <a href="javascript:void(0)">R</a>
+                         <ul class="sub-menu">
+                           <li><a href="javascript:alert('Coming Soon!');">R Overview</a></li>
+                           <li><a href="javascript:alert('Coming Soon!');">R Tutorials</a></li>
+                           <li><a href="javascript:alert('Coming Soon!');">R Examples</a></li>                      
+                         </ul>
+                     </li>
+                     <li class="has-sub">
+                         <a href="javascript:void(0)">Resources</a>
+                         <ul class="sub-menu">
+                             <li><a href="descriptives.html">Descriptive Statistics</a></li>
+                             <li><a href="inferences.html">Inferential Statistics</a></li>
+                             <li><a href="sosci_feedback.html">Participant Feedback</a></li>
+                          </ul>
+                      </li>
+                      <li><a href="great-articles.html">Great Articles</a></li>
+                      <li><a href="inferences copy.html">Publications</a></li>
+                      <li><a href="aboutme.html">About me</a></li>
+                  </ul>
+                 <!-- ***** Menu End ***** -->
+                 <!-- ***** BURGER MENU ***** -->
+                 <a class='menu-trigger'>
+                     <span>Menu</span>
+                 </a>
+             </nav>
+         </div>
+     </div>
+ </div>
+</header>
 <!-- *****IMPORT HEADER FROM header.html ***** -->
 
 
