--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
 
 
 
+                 <!-- ***** BURGER MENU ***** -->
+                 <a class='menu-trigger'>
+                  <span>Menu</span>
+              </a>
+          </nav>
+      </div>
+  </div>
+</div>
+</header>
 
 <!-- ***** Main Banner Area Start ***** -->
 <section class="section main-banner" data-section="section1" id="top">
