Fix burger menu

--- a/index.html
+++ b/index.html
@@ -34,6 +34,34 @@
 
 
 
+
+<style>
+  @media (max-width: 660px) {
+    .logo-img {
+      max-height: 10vw !important; /* Overriding the inline style for medium screens */
+    }
+  }
+
+  @media (max-width: 360px) {
+    .logo-img {
+      max-height: 8vw !important; /* Overriding the inline style for medium screens */
+    }
+  }
+
+  @media (max-width: 300px) {
+    .logo-img {
+      max-height: 7vw !important; /* Overriding the inline style for medium screens */
+    }
+  }
+  
+  @media (max-width: 250px) {
+    .logo-img {
+      max-height: 5vw !important; /* Overriding the inline style for medium screens */
+    }
+  }
+
+</style>     
+
                  <!-- ***** BURGER MENU ***** -->
                  <a class='menu-trigger'>
                   <span>Menu</span>
