--- a/header.html
+++ b/header.html
@@ -93,3 +93,12 @@
                       <li><a href="aboutme.html">About me</a></li>
                   </ul>
                  <!-- ***** Menu End ***** -->
+                  <!-- ***** BURGER MENU ***** -->
+                  <a class='menu-trigger'>
+                    <span>Menu</span>
+                </a>
+            </nav>
+        </div>
+    </div>
+</div>
+</header>
