--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                           </ul>
                       </li>
                       <li><a href="great-articles.html">Great Articles</a></li>
-                      <li><a href="inferences copy.html">Publications</a></li>
+                      <li><a href="baysian_brain.html">Publications</a></li>
                       <li><a href="aboutme.html">About me</a></li>
                   </ul>
                  <!-- ***** Menu End ***** -->
