--- a/inferences copy.html
+++ b/inferences copy.html
@@ -244,7 +244,13 @@
         height: 100%;
         border: 0;
       }
-    </style>
+  /* Media query for mobile devices */
+  @media only screen and (max-width: 600px) {
+    .responsive-iframe {
+      padding-bottom: 200%; /* Increase height for mobile devices */
+    }
+  }
+</style>
     
    
      <!-- Scripts -->
