--- a/sosci_feedback.html
+++ b/sosci_feedback.html
@@ -227,7 +227,7 @@
     </section>
 
 
-    
+
          <!-- For iframe -->
          <style>
           /* Make iframe responsive */
@@ -244,6 +244,15 @@
             height: 100%;
             border: 0;
           }
+          
+  /* Media query for mobile devices */
+  @media only screen and (max-width: 600px) {
+    .responsive-iframe {
+      padding-bottom: 200%; /* Increase height for mobile devices */
+    }
+  }
+</style>
+
         </style>
      <!-- Scripts -->
      <!-- Bootstrap core JavaScript -->
