--- a/aboutme.html
+++ b/aboutme.html
@@ -148,7 +148,7 @@
                       </li>
                       <li><a href="great-articles.html">Great Articles</a></li>
                       <li><a href="baysian_brain.html">Publications</a></li>
-                      <li><a href="aboutme.html">About me</a></li>
+                      <li><a class="active" href="aboutme.html">About me</a></li>
                   </ul>
                  <!-- ***** Menu End ***** -->
                   <!-- ***** BURGER MENU ***** -->
