--- a/great-articles.html
+++ b/great-articles.html
@@ -125,7 +125,7 @@
                    <!-- ***** Menu Start ***** -->
                    <ul class="nav" id="nav-menu">
                      <li class="scroll-to-section">
-                         <a class="active" href="index.html">Home</a>
+                         <a href="index.html">Home</a>
                      </li>
                      <li class="has-sub">
                          <a href="javascript:void(0)">SPSS</a>
@@ -151,7 +151,7 @@
                              <li><a href="sosci_feedback.html">Participant Feedback</a></li>
                           </ul>
                       </li>
-                      <li><a href="great-articles.html">Great Articles</a></li>
+                      <li><a class="active" href="great-articles.html">Great Articles</a></li>
                       <li><a href="baysian_brain.html">Publications</a></li>
                       <li><a href="aboutme.html">About me</a></li>
                   </ul>
