--- a/inferences.html
+++ b/inferences.html
@@ -125,7 +125,7 @@
                    <!-- ***** Menu Start ***** -->
                    <ul class="nav" id="nav-menu">
                      <li class="scroll-to-section">
-                         <a class="active" href="index.html">Home</a>
+                         <a href="index.html">Home</a>
                      </li>
                      <li class="has-sub">
                          <a href="javascript:void(0)">SPSS</a>
@@ -144,7 +144,7 @@
                          </ul>
                      </li>
                      <li class="has-sub">
-                         <a href="javascript:void(0)">Resources</a>
+                         <a class="active" href="javascript:void(0)">Resources</a>
                          <ul class="sub-menu">
                              <li><a href="descriptives.html">Descriptive Statistics</a></li>
                              <li><a href="inferences.html">Inferential Statistics</a></li>
