--- a/aboutme.html
+++ b/aboutme.html
@@ -120,7 +120,7 @@
                    <!-- ***** Menu Start ***** -->
                    <ul class="nav" id="nav-menu">
                      <li class="scroll-to-section">
-                         <a class="active" href="index.html">Home</a>
+                         <a href="index.html">Home</a>
                      </li>
                      <li class="has-sub">
                          <a href="javascript:void(0)">SPSS</a>
@@ -204,7 +204,7 @@
                     <p>Hello and welcome to Selvastics! <p>
                     <br>
                     <p>My name is Clievins Selva, and I am a Master's student at the University of Münster, Germany. I am passionate about statistics and data science, with a strong interest in teaching and tutoring. I have experience tutoring students in mathematics and statistics, and am proficient in using statistical software such as SPSS and RStudio. My academic focus extends to machine learning and algorithmic forecasting. These fields have deepened my understanding of data analysis, showcasing the transformative potential of technology in data prediction and interpretation. I eagerly anticipate further exploration and advancement in this rapidly evolving field.</p>
-                    <p>Selvastics is a project for a course in marketing, advertising, and financial psychology within my master program. You can also find my research paper for this blog page <a href="#">here</a>.  The goal of this platform is to share my knowledge in these sectors, initiate meaningful discussions, and cultivate a community passionate about these subjects. A special shoutout goes out to all participants of my SPSS and R courses. Your dedication and enthusiasm continue to motivate me on this educational journey. Feel free to browse the blog, leave comments, or reach out to me directly with any inquiries or suggestions. I look forward to engaging with you.</p>
+                    <p>Selvastics is a project for a course in marketing, advertising, and financial psychology within my master program. You can also find my research paper for this blog page <a href="https://selvastics.github.io/blogarticles/pdfs/2023-08-19_Selvastics_Clievins_Selva_export.pdf" target="_blank">here</a>.  The goal of this platform is to share my knowledge in these sectors, initiate meaningful discussions, and cultivate a community passionate about these subjects. A special shoutout goes out to all participants of my SPSS and R courses. Your dedication and enthusiasm continue to motivate me on this educational journey. Feel free to browse the blog, leave comments, or reach out to me directly with any inquiries or suggestions. I look forward to engaging with you.</p>
                     <br>
                     <p>Best,</p>
                     <p>Clievins Selva</p>
