--- a/sosci_feedback.html
+++ b/sosci_feedback.html
@@ -139,7 +139,7 @@
                      <li class="has-sub">
                          <a href="javascript:void(0)">R</a>
                          <ul class="sub-menu">
-                           <li><a href="javascript:alert('Coming Soon!');">R Overview</a></li>
+                           <li><a href="javascript:alert('Coming Soon!');">R Guide</a></li>
                            <li><a href="javascript:alert('Coming Soon!');">R Tutorials</a></li>
                            <li><a href="javascript:alert('Coming Soon!');">R Examples</a></li>                      
                          </ul>
