--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 
                 @media (max-width: 250px) {
                   .logo-img {
-                    max-height: 5vw !important; /* Overriding the inline style for medium screens */
+                    max-height: 5vw !important; /* Overriding the inline style for medium screens */ 
                   }
                 }
               
@@ -133,7 +133,7 @@
                      <li class="has-sub">
                          <a href="javascript:void(0)">R</a>
                          <ul class="sub-menu">
-                           <li><a href="javascript:alert('Coming Soon!');">R Overview</a></li>
+                          <li><a href="r_guide.html">R Guide</a></li>
                            <li><a href="javascript:alert('Coming Soon!');">R Tutorials</a></li>
                            <li><a href="javascript:alert('Coming Soon!');">R Examples</a></li>                      
                          </ul>
