--- a/inferences.html
+++ b/inferences.html
@@ -138,8 +138,8 @@
                      <li class="has-sub">
                          <a href="javascript:void(0)">R</a>
                          <ul class="sub-menu">
-                           <li><a href="javascript:alert('Coming Soon!');">R Guide</a></li>
-                           <li><a href="javascript:alert('Coming Soon!');">R Tutorials</a></li>
+                          <li><a href="r_guide.html">R Guide</a></li>
+                          <li><a href="javascript:alert('Coming Soon!');">R Tutorials</a></li>
                            <li><a href="javascript:alert('Coming Soon!');">R Examples</a></li>                      
                          </ul>
                      </li>
