--- a/r_guide.html
+++ b/r_guide.html
@@ -137,7 +137,7 @@
                          </ul>
                      </li>
                      <li class="has-sub">
-                         <a href="javascript:void(0)">R</a>
+                         <a class = "active" href="javascript:void(0)">R</a>
                          <ul class="sub-menu">
                            <li><a class = "active" href="r_guide.html">R Guide</a></li>
                            <li><a href="javascript:alert('Coming Soon!');">R Tutorials</a></li>
