--- a/r_guide.html
+++ b/r_guide.html
@@ -176,7 +176,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h2>participant feedback</h2>
+          <h2>R - Guide</h2>
           <h6>by selvastics</h6>
         </div>
       </div>
